--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>adrrs.github.io</h1>
+        <h1>rohit sonika</h1>
+        <h2>university of exeter</h2>
         <p></p>
-
-
-        <p class="view"><a href="https://github.com/adrrs">View My GitHub Profile</a></p>
 
       </header>
       <section>
