--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <ol>
 <li>
 <a href="http://dx.doi.org/10.2139/ssrn.1898839">The Option and Decision to Repurchase Stock</a><br>
-(<em>with Nicholas F. Carline and Mark B. Shackleton</em>) (<strong>Financial Management - 12/2014</strong>)<br>
+(<em>with Nicholas F. Carline and Mark B. Shackleton</em>)<br> (<strong>Financial Management - 12/2014</strong>)<br>
 <em>Abstract</em>: Open-market repurchase programs provide firms with the flexibility to manage the cash and risk aspects of their operations. We examine at which stage cash and risk matter in the typical stages of a repurchase program: announcement, implementation, and withdrawal. Cash and risk considerations appear to matter only at the implementation stage, and partially negate the traditional signaling effect around program announcement.</li>
 </ol>
 
@@ -41,7 +41,7 @@
 <ol>
 <li>
 <a href="mailto:r.sonika@exeter.ac.uk">Buyback Propensity and the Anti-Dilution of Dilutive Stock Options</a><br>
-(<em>with Mark B. Shackleton</em>) (<strong>10/2016</strong>)<br>
+(<em>with Mark B. Shackleton</em>)<br> (<strong>Under review - 10/2016</strong>)<br>
 <em>Abstract</em>: We study the anti-dilutive implications of daily share buyback behaviour in the U.K. based on stock option vesting conditions. We find repurchases to be more frequent for increases in unvested stock options, which we propose enhances anti-dilutive benefits. Tests based on overconfident classification of board of directors and treasury regulation change confirm an anti-dilutive motive. Significant pre-buyback negative returns rationalise more frequent repurchases, leading to higher post-buyback returns only when stock options are unvested. We conclude that shareholders view frequent repurchases as beneficial if they limit stock option funding cost while they are unvested.</li>
 </ol>
       </section>
