--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <section>
         <h3>
-<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://dl.dropboxusercontent.com/u/299183/CV.pdf">curriculum vitae</a> (<em>Updated: 10/2016</em>)</h3>
+<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://dl.dropboxusercontent.com/u/299183/CV.pdf">curriculum vitae</a></h3>
 
 <h3>
 <a id="published-papers" class="anchor" href="#published-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>published papers</h3>
