--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       </header>
       <section>
         <h3>
-<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://dl.dropboxusercontent.com/u/299183/CV.pdf">curriculum vitae</a></h3>
+<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://dl.dropboxusercontent.com/u/299183/CV.pdf" target="_blank">curriculum vitae</a></h3>
 
 <h3>
 <a id="published-papers" class="anchor" href="#published-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>published papers</h3>
 
 <ol>
 <li>
-<a href="http://dx.doi.org/10.2139/ssrn.1898839">The Option and Decision to Repurchase Stock</a><br>
+<a href="http://dx.doi.org/10.2139/ssrn.1898839" target="_blank">The Option and Decision to Repurchase Stock</a><br>
 (<em>with Nicholas F. Carline and Mark B. Shackleton</em>)<br> (<strong>Financial Management - 12/2014</strong>)<br>
 <em>Abstract</em>: Open-market repurchase programs provide firms with the flexibility to manage the cash and risk aspects of their operations. We examine at which stage cash and risk matter in the typical stages of a repurchase program: announcement, implementation, and withdrawal. Cash and risk considerations appear to matter only at the implementation stage, and partially negate the traditional signaling effect around program announcement.</li>
 </ol>
