--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <a title="Web Statistics" href="http://clicky.com/101005727"><img alt="Web Statistics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(101005727); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101005727ns.gif" /></p></noscript>
   </body>
 </html>
