--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 <ol>
 <li>
-<a href="mailto:r.sonika@exeter.ac.uk">Buyback Propensity and the Anti-Dilution of Dilutive Stock Options</a><br>
-(<em>with Mark B. Shackleton</em>)<br> (<strong>Under review - 10/2016</strong>)<br>
-<em>Abstract</em>: We study the anti-dilutive implications of daily share buyback behaviour in the U.K. based on stock option vesting conditions. We find repurchases to be more frequent for increases in unvested stock options, which we propose enhances anti-dilutive benefits. Tests based on overconfident classification of board of directors and treasury regulation change confirm an anti-dilutive motive. Significant pre-buyback negative returns rationalise more frequent repurchases, leading to higher post-buyback returns only when stock options are unvested. We conclude that shareholders view frequent repurchases as beneficial if they limit stock option funding cost while they are unvested.</li>
+<a href="mailto:r.sonika@exeter.ac.uk">Buyback Behaviour and the Option Funding Hypothesis</a><br>
+(<em>with Mark B. Shackleton</em>)<br> (<strong>Under review - 06/2017</strong>)<br>
+<em>Abstract</em>: Payout flexibility from share repurchases enables firms to reduce dilution and the cost of funding stock option grants. We examine if these benefits are dependent on how repurchases are implemented, and the level of stock option grants and their exercisable state. Using daily transaction data on repurchase size, frequency and cost, we find U.K. firms implementing large repurchase payouts (shares and value) and with increased frequency to lower the dilutive impact of option grants before they are exercisable. Daily average repurchase costs are significantly lower when options are unexercisable compared to exercisable. This repurchase behaviour is more evident after the adoption of treasury regulation that enabled firms to hold repurchased shares instead of cancelling them. We conclude that repurchase flexibility and cost benefits in funding executive stock options are realised conditional on the option exercisable state.</li>
 </ol>
       </section>
       <footer>
