--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <ol>
 <li>
 <a href="http://dx.doi.org/10.2139/ssrn.1898839" target="_blank">The Option and Decision to Repurchase Stock</a><br>
-(<em>with Nicholas F. Carline and Mark B. Shackleton</em>)<br> (<strong>Financial Management - 12/2014</strong>)<br>
+(<em>with Nicholas F. Carline and Mark B. Shackleton</em>)<br> <strong>Financial Management - 12/2014</strong><br>
 <em>Abstract</em>: Open-market repurchase programs provide firms with the flexibility to manage the cash and risk aspects of their operations. We examine at which stage cash and risk matter in the typical stages of a repurchase program: announcement, implementation, and withdrawal. Cash and risk considerations appear to matter only at the implementation stage, and partially negate the traditional signaling effect around program announcement.</li>
 </ol>
 
@@ -47,7 +47,7 @@
 <ol>
 <li>
 <a href="mailto:r.sonika@exeter.ac.uk">Buyback Behaviour and the Option Funding Hypothesis</a><br>
-(<em>with Mark B. Shackleton</em>)<br> (<strong>Under review - 06/2017</strong>)<br>
+(<em>with Mark B. Shackleton</em>)<br> <strong>Under review - 06/2017</strong><br>
 <em>Abstract</em>: Payout flexibility from share repurchases enables firms to reduce dilution and the cost of funding stock option grants. We examine if these benefits are dependent on how repurchases are implemented, and the level of stock option grants and their exercisable state. Using daily transaction data on repurchase size, frequency and cost, we find U.K. firms implementing large repurchase payouts (shares and value) and with increased frequency to lower the dilutive impact of option grants before they are exercisable. Daily average repurchase costs are significantly lower when options are unexercisable compared to exercisable. This repurchase behaviour is more evident after the adoption of treasury regulation that enabled firms to hold repurchased shares instead of cancelling them. We conclude that repurchase flexibility and cost benefits in funding executive stock options are realised conditional on the option exercisable state.</li>
 </ol>
       </section>
