--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>rohit sonika | university of exeter</title>
+    <title>rohit sonika | aalto university</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -22,8 +22,8 @@
     <div class="wrapper">
       <header>
         <h1>rohit sonika</h1>
-        <h2>university of exeter</h2>
-	<h3><a href="mailto:r.sonika@exeter.ac.uk">contact</a></h3>
+        <h2>aalto university</h2>
+	<h3><a href="mailto:rsnet@sonika.me">contact</a></h3>
         <p></p>
 
       </header>
@@ -46,7 +46,7 @@
 
 <ol>
 <li>
-<a href="mailto:r.sonika@exeter.ac.uk">Buyback Behaviour and the Option Funding Hypothesis</a><br>
+<a href="mailto:rsnet@sonika.me">Buyback Behaviour and the Option Funding Hypothesis</a><br>
 (<em>with Mark B. Shackleton</em>)<br> <strong>Under review - 06/2017</strong><br>
 <em>Abstract</em>: Payout flexibility from share repurchases enables firms to reduce dilution and the cost of funding stock option grants. We examine if these benefits are dependent on how repurchases are implemented, and the level of stock option grants and their exercisable state. Using daily transaction data on repurchase size, frequency and cost, we find U.K. firms implementing large repurchase payouts (shares and value) and with increased frequency to lower the dilutive impact of option grants before they are exercisable. Daily average repurchase costs are significantly lower when options are unexercisable compared to exercisable. This repurchase behaviour is more evident after the adoption of treasury regulation that enabled firms to hold repurchased shares instead of cancelling them. We conclude that repurchase flexibility and cost benefits in funding executive stock options are realised conditional on the option exercisable state.</li>
 </ol>
