--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>rohit sonika | </title>
+    <title>rohit sonika | aalto university</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -22,8 +22,8 @@
     <div class="wrapper">
       <header>
         <h1>rohit sonika</h1>
-        <h2></h2>
-	<h3><a href="mailto:rsnet@sonika.me">contact</a></h3>
+        <h2>aalto university</h2>
+	<h3><a href="mailto:rohit.sonika@aalto.fi">contact</a></h3>
         <p></p>
 
       </header>
