--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>
-<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://dl.dropboxusercontent.com/u/299183/CV.pdf" target="_blank">curriculum vitae</a></h3>
+<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://www.dropbox.com/s/7yyory8pq9cqsoo/CV.pdf?dl=0" target="_blank">curriculum vitae</a></h3>
 
 <h3>
 <a id="published-papers" class="anchor" href="#published-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>published papers</h3>
