--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>rohit sonika | aalto university</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-	  <script>
-  <a title="Real Time Web Analytics" href="http://clicky.com/101005727"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(101005727); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101005727ns.gif" /></p></noscript>
-</script>
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>rohit sonika</h1>
-        <h2>aalto university</h2>
-	<h3><a href="mailto:rohit.sonika@aalto.fi">contact</a></h3>
-        <p></p>
-
-      </header>
-      <section>
-        <h3>
-<a id="curriculum-vitae-updated-october-2016" class="anchor" href="#curriculum-vitae-updated-october-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://www.dropbox.com/s/7yyory8pq9cqsoo/CV.pdf?dl=0" target="_blank">curriculum vitae</a></h3>
-
-<h3>
-<a id="published-papers" class="anchor" href="#published-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>published papers</h3>
-
-<ol>
-<li>
-<a href="http://dx.doi.org/10.2139/ssrn.1898839" target="_blank">The Option and Decision to Repurchase Stock</a><br>
-(<em>with Nicholas F. Carline and Mark B. Shackleton</em>)<br> <strong>Financial Management - 12/2014</strong><br>
-<em>Abstract</em>: Open-market repurchase programs provide firms with the flexibility to manage the cash and risk aspects of their operations. We examine at which stage cash and risk matter in the typical stages of a repurchase program: announcement, implementation, and withdrawal. Cash and risk considerations appear to matter only at the implementation stage, and partially negate the traditional signaling effect around program announcement.</li>
-</ol>
-
-<h3>
-<a id="working-papers" class="anchor" href="#working-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>working papers</h3>
-
-<ol>
-<li>
-<a href="https://ssrn.com/abstract=2787581" target="_blank">Buyback Behaviour and the Option Funding Hypothesis</a><br>
-(<em>with Mark B. Shackleton</em>)<br> <strong>Under review - 06/2017</strong><br>
-<em>Abstract</em>: Payout flexibility from share repurchases enables firms to reduce dilution and the cost of funding stock option grants. We examine if these benefits are dependent on how repurchases are implemented, and the level of stock option grants and their exercisable state. Using daily transaction data on repurchase size, frequency and cost, we find U.K. firms implementing large repurchase payouts (shares and value) and with increased frequency to lower the dilutive impact of option grants before they are exercisable. Daily average repurchase costs are significantly lower when options are unexercisable compared to exercisable. This repurchase behaviour is more evident after the adoption of treasury regulation that enabled firms to hold repurchased shares instead of cancelling them. We conclude that repurchase flexibility and cost benefits in funding executive stock options are realised conditional on the option exercisable state.</li>
-</ol>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    <a title="Web Statistics" href="http://clicky.com/101005727"><img alt="Web Statistics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(101005727); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101005727ns.gif" /></p></noscript>
-  </body>
-</html>
+Nothing here anymore :(
