--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe src="https://giphy.com/embed/1YpPqJ6p8hS9y" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/1YpPqJ6p8hS9y">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/1YpPqJ6p8hS9y" width="480" height="360" frameBorder="0" class="-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/1YpPqJ6p8hS9y"></a></p>
+giphy
