--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <iframe src="https://giphy.com/embed/1YpPqJ6p8hS9y" width="480" height="360" frameBorder="0" class="-embed" allowFullScreen></iframe><p></p>
+	  <script>
+  <a title="Real Time Web Analytics" href="http://clicky.com/101005727"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(101005727); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101005727ns.gif" /></p></noscript>
+</script>
